--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>Casa do Código</title>
 </head>
 <body>
-<h1>vai que e tua</h1>
+
+	<h1>Instalação do Wildfly foi realizada com sucesso!</h1>
+
 </body>
 </html>
