livro dao admin

--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -22,6 +22,15 @@
 			<h:outputLabel value="Preço"/>
 			<h:inputText value="#{adminLivrosBean.livro.preco}" />
 		</div>
+		<div>
+			<h:outputLabel value="Autores" />
+			<h:selectManyListbox	 value="#{adminLivrosBean.autoresId}"
+					converter="javax.faces.Integer">
+				<f:selectItems value="#{adminLivrosBean.autores}"
+					var="autor"
+					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
+			</h:selectManyListbox>
+		</div>
 		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 	</h:form>
 
