--- a/src/main/webapp/livros/lista.xhtml
+++ b/src/main/webapp/livros/lista.xhtml
@@ -6,6 +6,9 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+
+	<h:messages />
+
 	<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}">
 		<h:column>
 			<f:facet name="header">Título</f:facet>
