--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -33,18 +33,28 @@
 		</div>
 		<div>
 			<h:outputLabel value="Autores" />
-			<h:selectManyListbox	 value="#{adminLivrosBean.autoresId}"
-					converter="javax.faces.Integer" id="autores">
+			<h:selectManyListbox	 value="#{adminLivrosBean.livro.autores}"
+					converter="autorConverter" id="autores">
 				<f:selectItems value="#{adminLivrosBean.autores}"
 					var="autor"
-					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
+					itemValue="#{autor}" itemLabel="#{autor.nome}" />
 			</h:selectManyListbox>
 			<h:message for="autores" />
+		</div>
+		<div>
+			<h:outputLabel value="Data de Publicação" />
+			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
+				id="dataPublicacao" />
+			<h:message for="dataPublicacao" />
 		</div>
 		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 	</h:form>
 
 </html>
+
+
+
+
 
 
 
