listagem de livros

--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -5,7 +5,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-	<h:form>
+	<h:form enctype="multipart/form-data">
 		<div>
 			<h:outputLabel value="Título" />
 			<h:inputText value="#{adminLivrosBean.livro.titulo}"
@@ -46,6 +46,10 @@
 			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
 				id="dataPublicacao" />
 			<h:message for="dataPublicacao" />
+		</div>
+		<div>
+			<h:outputLabel value="Capa do Livro" />
+			<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro" />
 		</div>
 		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 	</h:form>
