--- a/src/main/webapp/livros/lista.xhtml
+++ b/src/main/webapp/livros/lista.xhtml
@@ -32,6 +32,11 @@
 				#{autor.nome},
 			</ui:repeat>
 		</h:column>
+		<h:column>
+			<f:facet name="header">Capa Path</f:facet>
+			<img src="#{request.contextPath}/file/#{livro.capaPath}"
+				height="30%" alt="#{livro.titulo}" />
+		</h:column>
 	</h:dataTable>
 
 </html>
