--- a/src/main/webapp/livros/lista.xhtml
+++ b/src/main/webapp/livros/lista.xhtml
@@ -6,10 +6,33 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+<h:head>
+	<h:outputStylesheet library="css" name="bootstrap.min.css" />
+	<h:outputStylesheet library="css" name="style-admin.css" />
+</h:head>
+
+<h:body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Casa do Código</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Lista</a></li>
+            <li><h:link value="Cadastro" outcome="form" /></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+	
+	<div class="container">
+	<h1>Lista de Livros</h1>
 
 	<h:messages />
 
-	<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}">
+	<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
+			class="table table-bordered table-striped table-hover">
 		<h:column>
 			<f:facet name="header">Título</f:facet>
 			#{livro.titulo}
@@ -38,7 +61,8 @@
 				height="30%" alt="#{livro.titulo}" />
 		</h:column>
 	</h:dataTable>
-
+	</div>
+</h:body>
 </html>
 
 
