--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -5,82 +5,51 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<h:head>
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-</h:head>
-
-<h:body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Casa do Código</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><h:link value="Lista" outcome="lista" /></li>
-            <li class="active"><a href="#">Cadastro</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-	
-	<div class="container">
-	<h1>Cadastro de Livros</h1>
-	
-	<h:form enctype="multipart/form-data">
-		<div class="form-group">
+	<h:form>
+		<div>
 			<h:outputLabel value="Título" />
 			<h:inputText value="#{adminLivrosBean.livro.titulo}"
-				required="true" id="titulo" styleClass="form-control" />
+				required="true" id="titulo" />
 			<h:message for="titulo" />
 		</div>
-		<div  class="form-group">
+		<div>
 			<h:outputLabel value="Descrição"/>
 			<h:inputTextarea rows="4" cols="20"
 				required="true" value="#{adminLivrosBean.livro.descricao}"
-				id="descricao" styleClass="form-control" />
+				id="descricao" />
 			<h:message for="descricao" />
 		</div>
-		<div class="form-group">
+		<div>
 			<h:outputLabel value="Número de Páginas"/>
 			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}" 
-				required="true" id="numeroPaginas" styleClass="form-control" />
+				required="true" id="numeroPaginas" />
 			<h:message for="numeroPaginas" />
 		</div>
-		<div class="form-group">
+		<div>
 			<h:outputLabel value="Preço"/>
 			<h:inputText value="#{adminLivrosBean.livro.preco}" 
-				required="true" id="preco" styleClass="form-control" />
+				required="true" id="preco" />
 			<h:message for="preco" />
 		</div>
-		<div class="form-group">
+		<div>
 			<h:outputLabel value="Autores" />
 			<h:selectManyListbox	 value="#{adminLivrosBean.livro.autores}"
-					converter="autorConverter" id="autores" styleClass="form-control">
+					converter="autorConverter" id="autores">
 				<f:selectItems value="#{adminLivrosBean.autores}"
 					var="autor"
 					itemValue="#{autor}" itemLabel="#{autor.nome}" />
 			</h:selectManyListbox>
 			<h:message for="autores" />
 		</div>
-		<div class="form-group">
+		<div>
 			<h:outputLabel value="Data de Publicação" />
 			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
-				id="dataPublicacao" styleClass="form-control" />
+				id="dataPublicacao" />
 			<h:message for="dataPublicacao" />
 		</div>
-		<div class="form-group">
-			<h:outputLabel value="Capa do Livro" />
-			<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro"
-					styleClass="form-control" />
-		</div>
-		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
-			styleClass="btn btn-primary" />
-			
+		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 	</h:form>
-	</div>
-</h:body>
+
 </html>
 
 
