--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:o="http://omnifaces.org/ui">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -210,7 +209,7 @@
 
 <main>
 		
-<o:cache>
+	
 <section class="vitrineDestaquinho container">
 	<h2 class="vitrineDestaquinho-titulo">Últimos lançamentos</h2>
 	<ul class="vitrineDestaquinho-lista">
@@ -251,7 +250,7 @@
 		</ui:repeat>
 	</ul>
 </section>
-</o:cache>
+
 
 		<div class="buscaDoRodape container" role="presentation">
 	<form role="search" aria-labelledby="rotuloBuscaDoRodape" action="https://www.xstore.com.br/search" method="GET" class="buscaDoRodape-formulario">
