--- a/src/main/webapp/livro-detalhe.xhtml
+++ b/src/main/webapp/livro-detalhe.xhtml
@@ -3,9 +3,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:xlink="http://www.w3.org/1999/xlink"
-	xmlns:jsf="http://xmlns.jcp.org/jsf"
-	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+	xmlns:xlink="http://www.w3.org/1999/xlink">
 
 <f:metadata>
 	<f:viewParam value="#{livroDetalheBean.id}" name="id" />
@@ -313,7 +311,8 @@
 </header>
 
 	
-<form method="POST" class="adicionarAoCarrinho" jsf:id="formComprar">
+<form action="https://www.xstore.com.br/cart/add" method="POST" 
+		class="adicionarAoCarrinho">
 	<ul class="adicionarAoCarrinho-listaOfertas">
 		<li class="adicionarAoCarrinho-oferta" itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
 			<label class="adicionarAoCarrinho-infosDaOferta" for="product-variant-2055441665">
@@ -334,11 +333,9 @@
 					</span>
 				</p>
 			</label>
-			<button class="adicionarAoCarrinho-botaoComprar"
-				jsf:action="#{carrinhoComprasBean.add(livroDetalheBean.id)}"
-				type="submit" title="Compre o E-book">
-				Comprar
-			</button>
+				<button class="adicionarAoCarrinho-botaoComprar" type="submit" name="id" value="2055441665" title="Compre o E-book">
+					Comprar
+				</button>
 		</li>
 	</ul>
 </form>
@@ -366,15 +363,6 @@
 		</dt>
 		<dd class="infosAdicionaisDoLivro-info-valor" itemprop="numberOfPages">
 			#{livroDetalheBean.livro.numeroPaginas} páginas
-		</dd>
-		
-		<dt class="infosAdicionaisDoLivro-info-titulo">
-			Data de Publicação:
-		</dt>
-		<dd class="infosAdicionaisDoLivro-info-valor" itemprop="dataPublicacao">
-			<h:outputText value="#{livroDetalheBean.livro.dataPublicacao.time}">
-				<f:convertDateTime pattern="dd/MM/yyyy" />
-			</h:outputText>
 		</dd>
 		
 		<dt class="infosAdicionaisDoLivro-info-titulo">
@@ -1208,6 +1196,4 @@
 </footer>
 	<script type="text/javascript" src="#{request.contextPath}/resources/js/trackExternalLinks.js"></script>
 	<script type="text/javascript" src="#{request.contextPath}/resources/js/userreport.js"></script>
-<div style="width: auto; height: auto; position: fixed; z-index: 100000004; display: block; visibility: visible; overflow-x: hidden; bottom: 22%; left: 0px;"><iframe id="crowd-shortcut" name="crowd-shortcut" frameborder="0" scrolling="no" class="urp-no-hide" src="#{request.contextPath}/resources/saved_resource.html" style="max-width: none !important; width: 187px; display: block; height: 44px; margin-left: -143px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; visibility: visible;"></iframe></div></body><object id="988ba819-7a1a-af97-0988-b98b699195a2" width="0" height="0" type="application/gas-events-uni"></object>
-
-</html>
+<div style="width: auto; height: auto; position: fixed; z-index: 100000004; display: block; visibility: visible; overflow-x: hidden; bottom: 22%; left: 0px;"><iframe id="crowd-shortcut" name="crowd-shortcut" frameborder="0" scrolling="no" class="urp-no-hide" src="#{request.contextPath}/resources/saved_resource.html" style="max-width: none !important; width: 187px; display: block; height: 44px; margin-left: -143px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; visibility: visible;"></iframe></div></body><object id="988ba819-7a1a-af97-0988-b98b699195a2" width="0" height="0" type="application/gas-events-uni"></object></html>
