--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:o="http://omnifaces.org/ui">
 	
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -191,7 +192,7 @@
 				<img class="cabecalhoPrincipal-iconeItemNavegacao" src="#{request.contextPath}/resources/imagens/search.svg" alt="Ir para ao topo da página" />
 			</a>
 
-			<a tabindex="3" href="https://www.xstore.com.br/cart" title="Ir para sacola de compras" class="sacola cabecalhoPrincipal-itemNavegacao">
+			<a tabindex="3" href="#{request.contextPath}/carrinho.xhtml" title="Ir para sacola de compras" class="sacola cabecalhoPrincipal-itemNavegacao">
 				<svg width="28px" height="34px" viewBox="0 0 28 34" role="img" aria-labelledby="sacolaLabel" class="sacola-icone">
 					<title id="sacolaLabel">
 						Você tem 0 itens na sacola
@@ -209,48 +210,48 @@
 
 <main>
 		
+<o:cache scope="application">
+	<section class="vitrineDestaquinho container">
+		<h2 class="vitrineDestaquinho-titulo">Últimos lançamentos</h2>
+		<ul class="vitrineDestaquinho-lista">
+			<ui:repeat value="#{homeBean.ultimosLancamentos()}" var="livro">	
+				<li class="livroNaVitrine vitrineDestaquinho-produto">
+					<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link"
+							title="#{livro.titulo}">
+						<div class="livroNaVitrine-imagemContainer" role="presentation">
+							<img class="livroNaVitrine-imagem" 
+								src="#{request.contextPath}/file/#{livro.capaPath}" 
+									alt="#{livro.titulo}" title="#{livro.titulo}" />
+						</div>
+						<span class="livroNaVitrine-nome">#{livro.titulo}</span>
+					</a>
+				</li>
+			</ui:repeat>
+			
+		</ul>
+	</section>
 	
-<section class="vitrineDestaquinho container">
-	<h2 class="vitrineDestaquinho-titulo">Últimos lançamentos</h2>
-	<ul class="vitrineDestaquinho-lista">
-		<ui:repeat value="#{homeBean.ultimosLancamentos()}" var="livro">	
-			<li class="livroNaVitrine vitrineDestaquinho-produto">
-				<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link"
+	
+	<h3 class="homeCall container">Todos os nossos livros</h3>
+	
+	<section class="vitrineDaColecao container">
+		<ul class="vitrineDaColecao-lista">
+			<ui:repeat value="#{homeBean.demaisLivros()}" var="livro">
+				<li class="livroNaVitrine vitrineDaColecao-produto">
+					<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link" 
 						title="#{livro.titulo}">
-					<div class="livroNaVitrine-imagemContainer" role="presentation">
-						<img class="livroNaVitrine-imagem" 
-							src="#{request.contextPath}/file/#{livro.capaPath}" 
+						<div class="livroNaVitrine-imagemContainer" role="presentation">
+							<img class="livroNaVitrine-imagem" 
+								src="#{request.contextPath}/file/#{livro.capaPath}" 
 								alt="#{livro.titulo}" title="#{livro.titulo}" />
-					</div>
-					<span class="livroNaVitrine-nome">#{livro.titulo}</span>
-				</a>
-			</li>
-		</ui:repeat>
-		
-	</ul>
-</section>
-
-
-<h3 class="homeCall container">Todos os nossos livros</h3>
-
-<section class="vitrineDaColecao container">
-	<ul class="vitrineDaColecao-lista">
-		<ui:repeat value="#{homeBean.demaisLivros()}" var="livro">
-			<li class="livroNaVitrine vitrineDaColecao-produto">
-				<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link" 
-					title="#{livro.titulo}">
-					<div class="livroNaVitrine-imagemContainer" role="presentation">
-						<img class="livroNaVitrine-imagem" 
-							src="#{request.contextPath}/file/#{livro.capaPath}" 
-							alt="#{livro.titulo}" title="#{livro.titulo}" />
-					</div>
-					<span class="livroNaVitrine-nome">#{livro.titulo}</span>
-				</a>
-			</li>
-		</ui:repeat>
-	</ul>
-</section>
-
+						</div>
+						<span class="livroNaVitrine-nome">#{livro.titulo}</span>
+					</a>
+				</li>
+			</ui:repeat>
+		</ul>
+	</section>
+</o:cache>
 
 		<div class="buscaDoRodape container" role="presentation">
 	<form role="search" aria-labelledby="rotuloBuscaDoRodape" action="https://www.xstore.com.br/search" method="GET" class="buscaDoRodape-formulario">
