--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,7 +3,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:o="http://omnifaces.org/ui">
+	xmlns:o="http://omnifaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -165,11 +166,13 @@
 							Mobile
 						</a>
 					</li>
-					<li class="colecoesDaCDC-colecaoItem">
-						<a href="https://www.xstore.com.br/collections/livros-de-desenvolvimento-web" class="colecoesDaCDC-colecaoLink">
-							Web
-						</a>
-					</li>
+					<c:if test="#{currentUser.hasRole('ADMIN')}">
+						<li class="colecoesDaCDC-colecaoItem">
+							<a href="#{request.contextPath}/livros/lista.xhtml" class="colecoesDaCDC-colecaoLink">
+								Administração
+							</a>
+						</li>
+					</c:if>
 				
 			</nav>
 			<form role="search" aria-labelledby="rotuloBuscaPrincipal" action="https://www.xstore.com.br/search" method="GET" class="buscaPrincipal">
@@ -411,6 +414,18 @@
 		</ul>
 	</div>
 </footer>
+
+<script>
+	var canalDePromos = new WebSocket("ws://localhost:8080/#{request.contextPath}/canal/promos");
+	canalDePromos.onmessage = function(message) {
+		var novaPromo = JSON.parse(message.data);
+		if(confirm("Que tal aproveitar a promoção relâmpago " 
+				+ novaPromo.titulo)) {
+			document.location.href=
+				"#{request.contextPath}/livro-detalhe.xhtml?id=" + novaPromo.livroId;
+		}
+	};
+</script>
 
 <script type="text/javascript" src="#{request.contextPath}/resources/js/trackExternalLinks.js"></script>
 	
